# uov-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
benches/: uov_bench.rs
src/: lib.rs
tests/: kat_test.rs  sdk_test.rs
