[package]
name = "uov"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "UOV (Unbalanced Oil and Vinegar) signature scheme with a small Rust SDK"
keywords = ["cryptography", "signature", "post-quantum"]
categories = ["cryptography"]
exclude = ["target/**"]

[dependencies]
aes = "0.8"
ctr = "0.9"
sha3 = "0.10"
cipher = "0.4"
rand = "0.8"

[dev-dependencies]
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "uov_bench"
harness = false
